--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Setup SSH key and known_hosts
         run: |
           # 添加服务器到 known_hosts
+          touch ~/.ssh/known_hosts
           ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
           
       - name: Deploy using SSH
