--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
           
-      - name: Setup SSH key and known_hosts
-        run: |
-          # 添加服务器到 known_hosts
-          touch ~/.ssh/known_hosts
-          ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-          
       - name: Deploy using SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -27,6 +21,6 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             echo "--- 开始部署流程 ---"
-            cd /home/deploy
+            cd /home/deploy/python-learning
             git pull origin main
             echo "--- 部署完成 ---"
