--- a/fastapi-ai/requirements.txt
+++ b/fastapi-ai/requirements.txt
@@ -1,3 +1,10 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic==2.8.2
+core==1.0.1
+fastapi==0.121.1
+loguru==0.7.3
+pydantic==2.12.4
+pydantic_settings==2.11.0
+python-dotenv==1.2.1
+python_jose==3.5.0
+Requests==2.32.5
+starlette==0.50.0
+uvicorn==0.38.0
