refactor: Simplify Dockerfile and update docker-compose.yml for clarity and consistency

--- a/fastapi-ai/Dockerfile
+++ b/fastapi-ai/Dockerfile
@@ -1,40 +1,14 @@
-# 使用官方 Python 运行时作为基础镜像
 FROM python:3.11-slim
 
-# 设置工作目录
-WORKDIR /app
+ARG APP_HOME=/app
 
-# 设置环境变量
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app
+WORKDIR ${APP_HOME}
 
-# 安装系统依赖
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        build-essential \
-    && rm -rf /var/lib/apt/lists/*
+RUN sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list.d/debian.sources \
+    && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone \
+    && apt update && apt install weasyprint -y
 
-# 复制依赖文件
 COPY requirements.txt .
+RUN pip install --upgrade pip && pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
 
-# 安装 Python 依赖
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
-
-# 复制项目代码
-COPY . .
-
-# 创建非 root 用户
-RUN adduser --disabled-password --gecos '' appuser
-
-# 创建日志目录并设置权限
-RUN mkdir -p /app/logs \
-    && chown -R appuser:appuser /app
-USER appuser
-
-# 暴露端口
-EXPOSE 8010
-
-# 启动应用
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8010"]
+CMD ["python", "-m", "uvicorn", "--host", "0.0.0.0", "--port", "8010", "main:app", "--workers", "4"]
